# cookiecutter-pypackage

./: .travis.yml  CONTRIBUTING.rst  README.rst  cookiecutter.json  pytest.ini  requirements_dev.txt  setup.py  tox.ini
docs/: tutorial.rst
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .travis.yml  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
